<resources>
    <string name="app_name">NewLogin</string>
    <string name="price_format">%d TK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">Image</string>
    <string name="Save">Save</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="budget">Budget</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Sign_in">Sign In</string>
    <string name="have_no_account">Have no account?</string>
    <string name="sign_up">Have No Account? Register</string>
    <string name="full_name">Full Name</string>
    <string name="mobilenumber">MobileNumber</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="remaining">Remaining</string>
    <string name="title_expense">Add Expense</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Enter Expense Amount</string>
    <string name="name">Enter Expense Item</string>

</resources>
