<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_expense"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/title_expense"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="42dp">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatEditText
        app:layout_constraintTop_toBottomOf="@id/title_expense"
        android:id="@+id/item_name_ex"
        android:layout_width="match_parent"
        android:hint="@string/name"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:layout_height="42dp">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        app:layout_constraintTop_toBottomOf="@id/item_name_ex"
        android:id="@+id/amount_ex"
        android:layout_width="match_parent"
        android:hint="@string/amount"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:layout_height="42dp">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_expense_bt"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_ex"
        android:text="@string/save"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginStart="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_expense_bt"
        app:layout_constraintTop_toBottomOf="@id/amount_ex"
        app:layout_constraintStart_toEndOf="@id/save_expense_bt"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>